--- a/db-management.qmd
+++ b/db-management.qmd
@@ -50,7 +50,7 @@ create table webtraffic (date char(8), hour char(6), site varchar, page varchar,
 Here's an example of reading from multiple files into SQLite using the command line.
 We create a file `import.sql` that has the configuration for the import:
 
-```
+```sql
 .separator " "
 .import /dev/stdin webtraffic
 ```
@@ -66,7 +66,7 @@ done
 
 Let's check that the records are in the database. We could do this from R or Python, but here we'll do it in the SQLite interface:
 
-```
+```sql
 select * from webtraffic limit 5;
 ```
 
@@ -126,7 +126,7 @@ psql  # start postgres interpreter
 Now from within the Postgres interpreter, you can create a database, tables within the database, and authenticate users to do things with those tables. 
 
 
-```
+```sqlpostgresql
 create database wikistats;
 create user paciorek with password 'test';
 grant all privileges on database wikistats to paciorek;
@@ -138,7 +138,7 @@ It can get a bit involved because the administrator has fine-grained control ove
 
 Now let's create a table in the database, after first connecting to the specific database so as to operate on it. 
 
-```
+```sqlpostgresql
 \connect wikistats
 create table webtraffic (date char(8), hour char(6), site varchar, page varchar,
        count integer, size double precision);
@@ -152,7 +152,7 @@ Notice the use of `\` to do administrative tasks (as opposed to executing SQL sy
 
 If you want control over where the database is stored (you probably only need to worry about this if you are creating a large database), you can do things like this:
 
-```
+```sqlpostgresql
 show data_directory;
 create tablespace dbspace location '/var/tmp/pg';
 create database wikistats tablespace dbspace;
@@ -164,20 +164,20 @@ grant all privileges on database wikistats to paciorek;
 
 Here's an example of importing a single file into Postgres from within the psql interpreter running as the special postgres user. In this case we have space-delimited text files. You can obtain the file `part-00000` as discussed in the introduction (you'll need to run `gunzip part-00000.gz` first).
 
-```
+```sqlpostgresql
 \connect wikistats
 copy webtraffic from 'part-00000' delimiter ' ';
 ```
 
 If one had CSV files, one could do the following
 
-```
+```sqlpostgresql
 copy webtraffic from 'part-00000' csv;
 ```
 
 To actually handle the Wikistats input files, we need to deal with backslash characters occurring at the end of text for a given column in some rows. Ordinarily in standard Postgres 'text' format (different from Postgres 'csv' format), a backslash is used to 'quote' characters that would usually be treated as row or column delimiters (i.e., preceding such a character by a backslash means it is treated as a character that is part of the field). But we just want the backslash treated as a character itself. So we need to tell Postgres not to treat a backslash as the quoting character. To do that we specify the `quote` character. However, the quote keyword is only provided when importing 'csv' format. In 'csv' format the double-quote character is by default treated as delineating the beginning and end of text in a field, but the Wikistats files have double-quotes as part of the fields. So we need to set the quote character as neither a double-quote nor a backslash. The following syntax does that by specifying that the quote character is a character (`\b`) that never actually appears in the file. The 'e' part is so that Postgres treats `\b` as a single character, i.e., 'escaping' the backslash, and the 'csv' is because the quote keyword only works with the csv format, but note that by setting the delimiter to a space, it's not really a CSV file! 
 
-```
+```sqlpostgresql
 copy webtraffic from 'part-00000' delimiter ' ' quote e'\b' csv;
 ```
 
